--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "un-website-boilerplate"
+name = "un-cnames"
 version = "0.1.0"
 description = "UN Website Boilerplate"
 readme = "README.md"
